--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
     </script>
     <style>
       body {
-        background-color: #ffffff; /* Pure white */
-        color: #1e293b; /* slate-800 */
+        background-color: #ffffff;
+        color: #1e293b;
       }
-      
       /* Confetti Animation */
       @keyframes confetti-fall {
         0% { transform: translateY(-10vh) rotate(0deg); opacity: 1; }
@@ -53,19 +52,9 @@
         animation: confetti-fall 4s linear forwards;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "@google/genai": "https://esm.sh/@google/genai@^1.33.0",
-    "react/": "https://esm.sh/react@^19.2.3/"
-  }
-}
-</script>
-</head>
+    </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
